--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
+    "@nestjs/swagger": "^7.1.8",
     "cross-env": "^7.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
